--- a/modules-available/adduser/templates/user-permissions.html
+++ b/modules-available/adduser/templates/user-permissions.html
@@ -22,3 +22,13 @@
 	{{/roles}}
 	</tbody>
 </table>
+
+<div class="row">
+	<div class="col-md-4"></div>
+	<div class="col-md-8">
+		<button class="btn btn-lg btn-primary btn-block save-btn" type="submit">
+			<span class="glyphicon glyphicon-floppy-disk"></span>
+			{{lang_save}}
+		</button>
+	</div>
+</div>
