--- a/modules-available/adduser/templates/page-edituser.html
+++ b/modules-available/adduser/templates/page-edituser.html
@@ -4,7 +4,7 @@
 
 <div class="row">
 	<div class="col-md-4"><label for="login">{{lang_login}}</label></div>
-	<div class="col-md-4"><input id="label" type="text" name="login" value="{{login}}" class="form-control"
+	<div class="col-md-4"><input id="login" type="text" name="login" value="{{login}}" class="form-control event-box"
 										  placeholder="{{lang_username}}" autofocus></div>
 </div>
 <div class="row">
@@ -18,9 +18,9 @@
 
 <div class="row">
 	<div class="col-md-4"><label for="pass1">{{lang_changePassword}}</label></div>
-	<div class="col-md-4"><input id="pass1" {{password_disabled}} type="password" name="pass1" class="form-control" placeholder="{{lang_password}}">
+	<div class="col-md-4"><input id="pass1" {{password_disabled}} type="password" name="pass1" class="form-control event-box" placeholder="{{lang_password}}">
 	</div>
-	<div class="col-md-4"><input {{password_disabled}} type="password" name="pass2" class="form-control"
+	<div class="col-md-4"><input id="pass2" {{password_disabled}} type="password" name="pass2" class="form-control event-box"
 										  placeholder="{{lang_confirmation}}"></div>
 </div>
 {{#password_disabled}}
@@ -37,7 +37,7 @@
 
 <div class="row">
 	<div class="col-md-4"><label for="fullname">{{lang_fullName}}</label></div>
-	<div class="col-md-4"><input id="fullname" type="text" name="fullname" value="{{fullname}}" class="form-control"
+	<div class="col-md-4"><input id="fullname" type="text" name="fullname" value="{{fullname}}" class="form-control event-box"
 										  placeholder="{{lang_fullName}}"></div>
 </div>
 <br>
@@ -59,12 +59,16 @@
 <div class="row">
 	<div class="col-md-4"></div>
 	<div class="col-md-8">
-		<button class="btn btn-lg btn-primary btn-block" type="submit">
+		<button class="btn btn-lg btn-primary btn-block save-btn" type="submit">
 			<span class="glyphicon glyphicon-floppy-disk"></span>
 			{{lang_save}}
 		</button>
+		<div id="add-msg" class="text-danger slx-bold"></div>
 	</div>
 </div>
 <input type="hidden" name="action" value="edituser">
 <input type="hidden" name="userid" value="{{userid}}">
 <input type="hidden" name="token" value="{{token}}">
+<script>
+	const SLX_EDITUSER = true;
+</script>
