[dozmod] Properly sort "last login" column in user list

--- a/modules-available/dozmod/templates/userlist.html
+++ b/modules-available/dozmod/templates/userlist.html
@@ -28,7 +28,7 @@
 							</{{nameTag}}>
 						</td>
 						<td class="text-left text-nowrap">{{orgname}}</td>
-						<td class="text-left text-nowrap">{{lastlogin}}</td>
+						<td class="text-left text-nowrap" data-sort-value="{{lastlogin}}">{{lastlogin_s}}</td>
 						<td class="text-left text-nowrap"><a href="mailto:{{email}}">{{email}}</a></td>
 						<td>
 							<div class="checkbox">
