[permissionmanager] Add role description field; install some default rules
Closes #3356

--- a/modules-available/permissionmanager/templates/roleeditor.html
+++ b/modules-available/permissionmanager/templates/roleeditor.html
@@ -13,10 +13,16 @@
 	<input type="hidden" name="roleid" value="{{roleid}}">
 
 	<div class="input-group">
-	<span class="input-group-addon">
+	<span class="input-group-addon slx-ga">
 		<label for="rolename">{{lang_name}}</label>
 	</span>
 		<input id="rolename" name="rolename" value="{{rolename}}" type="text" class="form-control" required>
+	</div>
+	<div class="input-group">
+		<span class="input-group-addon slx-ga">
+			<label for="roledescription">{{lang_description}}</label>
+		</span>
+		<input id="roledescription" name="roledescription" value="{{roledescription}}" type="text" class="form-control">
 	</div>
 	<br>
 
