--- a/modules-available/rebootcontrol/templates/status.html
+++ b/modules-available/rebootcontrol/templates/status.html
@@ -7,8 +7,6 @@
 	</form>
 </div>
 
-<div data-tm-id="{{taskId}}" data-tm-log="error" data-tm-callback="updateStatus"></div>
-
 <div>
 	<table class="table table-hover stupidtable" id="dataTable">
 		<thead>
@@ -24,7 +22,7 @@
 		<tbody>
 		{{#clients}}
 			<tr>
-				<td>{{machineuuid}}</td>
+				<td>{{hostname}}{{^hostname}}{{machineuuid}}{{/hostname}}</td>
 				<td>{{clientip}}</td>
 				<td id="status-{{machineuuid}}"></td>
 			</tr>
@@ -32,6 +30,8 @@
 		</tbody>
 	</table>
 </div>
+
+<div data-tm-id="{{taskId}}" data-tm-log="error" data-tm-callback="updateStatus"></div>
 
 <script type="application/javascript">
 	statusStrings = {
@@ -50,12 +50,20 @@
 			return;
 		var clientStatus = task.data.clientStatus;
 		for (var uuid in clientStatus) {
-			if (clientStatus.hasOwnProperty(uuid)) {
-				var shutdownTime = ' ';
-				if (clientStatus[uuid] === 'SHUTDOWN_AT' || clientStatus[uuid] === 'REBOOT_AT') {
-					shutdownTime += task.data.time;
-				}
-				$("#status-" + uuid).text(statusStrings[clientStatus[uuid]] + shutdownTime);
+			if (!clientStatus.hasOwnProperty(uuid))
+				continue;
+			var $s = $("#status-" + uuid);
+			var status = clientStatus[uuid];
+			if ($s.data('state') === status)
+				continue;
+			$s.data('state', status);
+			var text = statusStrings[status];
+			if (status === 'SHUTDOWN_AT' || status === 'REBOOT_AT') {
+				text += ' ' + task.data.time;
+			}
+			$s.text(text);
+			if (status === 'CONNECTING' || status === 'REBOOTING') {
+				$s.append('<span class="glyphicon glyphicon-hourglass"></span>');
 			}
 		}
 	}
