[locations] Restore row with unassigned machines

--- a/modules-available/locations/templates/locations.html
+++ b/modules-available/locations/templates/locations.html
@@ -96,9 +96,10 @@
 				<a href="?do=Statistics&amp;show=list&amp;filters=location=0">
 					&nbsp;{{unassignedCount}}&nbsp;
 				</a>
+				<span style="display:inline-block;width:5ex"></span>
 			</td>
 			<td class="text-nowrap" align="right">
-				{{clientLoad}}
+				{{unassignedLoad}}
 			</td>
 			<td></td>
 			<td>{{defaultConfig}}</td>
