[dozmod] Make label activate checkboxes

--- a/modules-available/dozmod/templates/runtimeconfig.html
+++ b/modules-available/dozmod/templates/runtimeconfig.html
@@ -20,13 +20,13 @@
 
 				<div class="checkbox">
 					<input type="checkbox"  name="defaultLecturePermissions[admin]" value="1" {{defaultLecturePermissions.admin}} id ="lecture_admin" class="form-control">
-					<label>
+					<label for"lecture_admin">
 						{{lang_lecturePermissionAdmin}}
 					</label>
 				</div>
 				<div class="checkbox">
 					<input type="checkbox" name="defaultLecturePermissions[edit]" value="1" {{defaultLecturePermissions.edit}} id ="lecture_edit" class="form-control">
-					<label>
+					<label for="lecture_edit">
 						{{lang_lecturePermissionEdit}}
 					</label>
 				</div>
