[sysconfig] Placeholder for listen port in ssh module

--- a/modules-available/sysconfig/templates/sshconfig-start.html
+++ b/modules-available/sysconfig/templates/sshconfig-start.html
@@ -21,7 +21,7 @@
 	</div>
 	<div class="form-group">
 		<label for="port">{{lang_listenPort}}</label>
-		<input class="form-control" type="text" name="listenPort" value="{{listenPort}}" id="port" pattern="\d+">
+		<input class="form-control" type="text" name="listenPort" value="{{listenPort}}" id="port" pattern="\d+" placeholder="22">
 		<i>{{lang_listenPortInfo}}</i>
 	</div>
 	<hr/>
