[exams] Fix warning msg when checking timeranges (sec vs ms)

--- a/modules-available/exams/templates/page-add-edit-exam.html
+++ b/modules-available/exams/templates/page-add-edit-exam.html
@@ -221,8 +221,8 @@ document.addEventListener("DOMContentLoaded", function () {
 			var to = e.data('to');
 			if (!from || !to)
 				return;
-			from = slxMoment(from);
-			to = slxMoment(to);
+			from = slxMoment.unix(from);
+			to = slxMoment.unix(to);
 			if (from.isBefore(sd) || to.isAfter(ed)) {
 				e.css('color', '#999');
 				e.data('inrange', false)
@@ -239,7 +239,7 @@ document.addEventListener("DOMContentLoaded", function () {
 		if (sel.val() === '' || sel.data('inrange')) {
 			$('#lecture-info').text('-');
 		} else {
-			$('#lecture-info').text('{{lang_lectureOutOfRange}} (' + slxMoment(sel.data('from') * 1000).format('YYYY-MM-DD H:mm') + ' - ' + slxMoment(sel.data('to') * 1000).format('YYYY-MM-DD H:mm') + ')');
+			$('#lecture-info').text('{{lang_lectureOutOfRange}} (' + slxMoment.unix(sel.data('from')).format('YYYY-MM-DD H:mm') + ' - ' + slxMoment.unix(sel.data('to')).format('YYYY-MM-DD H:mm') + ')');
 		}
 	};
 
