[serversetup-bwlp] Fix some menu edit issues
 - Newly created menu entries couldn't be made default
 - Saving a new menu was broken

--- a/modules-available/serversetup-bwlp/templates/menu-edit.html
+++ b/modules-available/serversetup-bwlp/templates/menu-edit.html
@@ -41,7 +41,7 @@
 				</div>
 				<div class="col-sm-9">
 					<div class="checkbox">
-						<input name="defmenu" id="panel-defmenu" type="checkbox" {{#isdefault}}checked{{/isdefault}} {{disabled}}>
+						<input name="defmenu" id="panel-defmenu" type="checkbox" {{#isdefault}}checked disabled{{/isdefault}} {{disabled}}>
 						<label for="panel-defmenu">{{lang_defaultMenu}}</label>
 					</div>
 				</div>
