--- a/modules-available/syslog/templates/heading.html
+++ b/modules-available/syslog/templates/heading.html
@@ -1,7 +1,13 @@
 <div class="page-header">
-	<button type="button" class="btn btn-default pull-right" data-toggle="modal" data-target="#modal-settings">
-		<span class="glyphicon glyphicon-cog"></span> {{lang_settings}}
-	</button>
+	<span class="buttonbar pull-right">
+		<button type="button" class="btn btn-default" data-toggle="modal" data-target="#modal-export" {{perms.export-user-data.disabled}}>
+			<span class="glyphicon glyphicon-export"></span>
+			{{lang_userExport}}
+		</button>
+		<button type="button" class="btn btn-default" data-toggle="modal" data-target="#modal-settings">
+			<span class="glyphicon glyphicon-cog"></span> {{lang_settings}}
+		</button>
+	</span>
 
 	<div id="modal-settings" class="modal fade" role="dialog">
 		<div class="modal-dialog">
@@ -23,6 +29,33 @@
 								class="btn btn-primary">
 							<span class="glyphicon glyphicon-floppy-disk"></span>
 							{{lang_save}}
+						</button>
+					</div>
+				</form>
+			</div>
+
+		</div>
+	</div>
+
+	<div id="modal-export" class="modal fade" role="dialog">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<form method="post" action="api.php?do=syslog">
+					<input type="hidden" name="token" value="{{token}}">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal">&times;</button>
+						<h4 class="modal-title"><b>{{lang_userExport}}</b></h4>
+					</div>
+					<div class="modal-body">
+						<p>{{lang_exportUserDesc}}</p>
+						<label for="export-user-name">{{lang_userLogin}}</label>
+						<input id="export-user-name" type="text" name="export-user" class="form-control" style="width:100%">
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">{{lang_cancel}}</button>
+						<button type="submit" class="btn btn-primary">
+							<span class="glyphicon glyphicon-export"></span>
+							{{lang_export}}
 						</button>
 					</div>
 				</form>
