--- a/modules-available/serversetup-bwlp/templates/ipxe-new-boot-entry.html
+++ b/modules-available/serversetup-bwlp/templates/ipxe-new-boot-entry.html
@@ -1,5 +1,11 @@
 <h2>{{lang_newBootEntryHead}}</h2>
 
+{{#builtin}}
+	<div class="alert alert-warning">
+		{{lang_editBuiltinWarn}}
+	</div>
+{{/builtin}}
+
 <div class="panel panel-default">
 	<div class="panel-heading">
 		{{lang_bootEntryData}}
@@ -33,47 +39,69 @@
 				</label>
 				<input id="input-title" class="form-control" name="title" value="{{title}}" maxlength="100">
 			</div>
+			<div class="form-group">
+				<label for="arch-selector">
+					{{lang_archSelector}}
+				</label>
+				<select id="arch-selector" class="form-control" name="entry[arch]">
+					<option value="agnostic" {{agnostic_selected}}>{{lang_archAgnostic}}</option>
+					<option value="PCBIOS" {{PCBIOS_selected}}>{{lang_biosOnly}}</option>
+					<option value="EFI" {{EFI_selected}}>{{lang_efiOnly}}</option>
+					<option value="PCBIOS-EFI" {{PCBIOS-EFI_selected}}>{{lang_archBoth}}</option>
+				</select>
+			</div>
 
 			<div class="type-form" id="form-exec">
-				<div class="form-group">
-					<label for="input-ex">
-						{{lang_imageToLoad}}
-					</label>
-					<input id="input-ex" class="form-control" name="entry[executable]" value="{{entry.executable}}">
-				</div>
-				<div class="form-group">
-					<label for="input-rd">
-						{{lang_initRd}}
-					</label>
-					<input id="input-rd" class="form-control" name="entry[initRd]" value="{{entry.initRd}}">
-				</div>
-				<div class="form-group">
-					<label for="input-cmd">
-						{{lang_commandLine}}
-					</label>
-					<input id="input-cmd" class="form-control" name="entry[commandLine]"
-							 value="{{entry.commandLine}}">
-				</div>
-				<div class="form-group">
-					<div class="checkbox checkbox-inline">
-						<input id="exec-replace" class="form-control" type="checkbox"
-								 name="entry[replace]" {{entry.replace_checked}}>
-						<label for="exec-replace">{{lang_execReplace}}</label>
-					</div>
-				</div>
-				<div class="form-group">
-					<div class="checkbox checkbox-inline">
-						<input id="exec-au" class="form-control" type="checkbox"
-								 name="entry[autoUnload]" {{entry.autoUnload_checked}}>
-						<label for="exec-au">{{lang_execAutoUnload}}</label>
-					</div>
-				</div>
-				<div class="form-group">
-					<div class="checkbox checkbox-inline">
-						<input id="exec-reset" class="form-control" type="checkbox"
-								 name="entry[resetConsole]" {{entry.resetConsole_checked}}>
-						<label for="exec-reset">{{lang_execResetConsole}}</label>
-					</div>
+				<div class="row">
+					{{#entries}}
+						<div class="mode-class col-md-6" id="col-{{mode}}">
+							<div class="panel panel-default">
+								<div class="panel-body">
+									<h4 class="arch-heading">{{mode}}</h4>
+									<div class="form-group">
+										<label for="input-ex">
+											{{lang_imageToLoad}}
+										</label>
+										<input id="input-ex" class="form-control" name="entry[executable][{{mode}}]" value="{{executable}}">
+									</div>
+									<div class="form-group">
+										<label for="input-rd">
+											{{lang_initRd}}
+										</label>
+										<input id="input-rd" class="form-control" name="entry[initRd][{{mode}}]" value="{{initRd}}">
+									</div>
+									<div class="form-group">
+										<label for="input-cmd">
+											{{lang_commandLine}}
+										</label>
+										<input id="input-cmd" class="form-control" name="entry[commandLine][{{mode}}]"
+												 value="{{commandLine}}">
+									</div>
+									<div class="form-group">
+										<div class="checkbox checkbox-inline">
+											<input id="exec-replace-{{mode}}" class="form-control" type="checkbox"
+													 name="entry[replace][{{mode}}]" {{replace_checked}}>
+											<label for="exec-replace-{{mode}}">{{lang_execReplace}}</label>
+										</div>
+									</div>
+									<div class="form-group">
+										<div class="checkbox checkbox-inline">
+											<input id="exec-au-{{mode}}" class="form-control" type="checkbox"
+													 name="entry[autoUnload][{{mode}}]" {{autoUnload_checked}}>
+											<label for="exec-au-{{mode}}">{{lang_execAutoUnload}}</label>
+										</div>
+									</div>
+									<div class="form-group">
+										<div class="checkbox checkbox-inline">
+											<input id="exec-reset-{{mode}}" class="form-control" type="checkbox"
+													 name="entry[resetConsole][{{mode}}]" {{resetConsole_checked}}>
+											<label for="exec-reset-{{mode}}">{{lang_execResetConsole}}</label>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					{{/entries}}
 				</div>
 			</div>
 
@@ -104,5 +132,21 @@ document.addEventListener('DOMContentLoaded', function () {
 		$('#form-' + $(this).val()).show();
 	});
 	$('.type-radio[checked]').click();
+	var $as = $('#arch-selector');
+	$as.change(function() {
+		var v = $as.val();
+		if (v === 'agnostic') {
+			v = 'PCBIOS';
+			$('.arch-heading').hide();
+		} else {
+			$('.arch-heading').show();
+		}
+		var vs = v.split('-');
+		var cols = 12 / vs.length;
+		$('.mode-class').hide();
+		for (var i = 0; i < vs.length; ++i) {
+			$('#col-' + vs[i]).attr('class', 'mode-class col-md-' + cols).show();
+		}
+	}).change();
 });
 // --></script>
