--- a/modules-available/serversetup-bwlp/templates/ipxe-new-boot-entry.html
+++ b/modules-available/serversetup-bwlp/templates/ipxe-new-boot-entry.html
@@ -115,6 +115,12 @@
 				</div>
 			</div>
 
+			{{#builtin}}
+				<div class="alert alert-warning">
+					{{lang_editBuiltinWarn}}
+				</div>
+			{{/builtin}}
+
 			<div class="buttonbar text-right">
 				<button type="submit" class="btn btn-primary">
 					<span class="glyphicon glyphicon-floppy-disk"></span>
